--- a/prx/rc3/hooks.yml
+++ b/prx/rc3/hooks.yml
@@ -1,7 +1,7 @@
 # ASM function ported to PRX to make room for the loader
 # Don't remove this
 _shk_prx_elf_substitute:
-    addr: 0x20f558
+    addr: 0xa958b8
     emitTrampoline: no
 
 cellGameContentPermit:
