--- a/prx/rc3/hooks.yml
+++ b/prx/rc3/hooks.yml
@@ -19,3 +19,7 @@ pre_game_loop:
 cellPadGetDataRedirect:
     addr: 0x9432d0
     replacedInstr: stdu r1, -0xa0(r1)
+
+render:
+    addr: 0x11b434
+    replacedInstr: stdu r1, -0x80(r1)
